--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ staticman:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
   hide                   : true     # change to true to hide the RSS feed in the footer
-  path                   : # blank (default) uses feed.xml
+  path                   : false # blank (default) uses feed.xml
 
 
 # SEO Related
