--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Jinsheng Ji"
   pronouns         : # example: "she/her"  
-  bio              : "Think before act!"
+  bio              : "Think before act !"
   location         : "Singapore"
   employer         : "Nanyang Technological University"
   uri              : # URL
@@ -78,8 +78,8 @@ author:
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
-  books:
-    title: 'Books'
+  # books:
+  #   title: 'Books'
   manuscripts:
     title: 'Journal Articles'    
   conferences:
